v25..7.1 Network Upgrade