@@ -14,37 +14,40 @@
  */
 package org.hyperledger.besu.ethereum.api.jsonrpc.internal.processor;
 
+import static org.hyperledger.besu.ethereum.mainnet.feemarket.ExcessBlobGasCalculator.calculateExcessBlobGasForParent;
+
+import org.hyperledger.besu.datatypes.BlobGas;
 import org.hyperledger.besu.datatypes.Hash;
+import org.hyperledger.besu.datatypes.Wei;
+import org.hyperledger.besu.ethereum.ProtocolContext;
+import org.hyperledger.besu.ethereum.api.jsonrpc.internal.processor.Tracer.TraceableState;
 import org.hyperledger.besu.ethereum.chain.Blockchain;
 import org.hyperledger.besu.ethereum.core.Block;
 import org.hyperledger.besu.ethereum.core.BlockBody;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
-import org.hyperledger.besu.ethereum.core.MutableWorldState;
 import org.hyperledger.besu.ethereum.core.Transaction;
 import org.hyperledger.besu.ethereum.mainnet.MainnetTransactionProcessor;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSpec;
 import org.hyperledger.besu.ethereum.mainnet.TransactionValidationParams;
-import org.hyperledger.besu.ethereum.vm.BlockHashLookup;
-import org.hyperledger.besu.ethereum.worldstate.WorldStateArchive;
+import org.hyperledger.besu.evm.blockhash.BlockHashLookup;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class BlockReplay {
 
   private final ProtocolSchedule protocolSchedule;
   private final Blockchain blockchain;
-  private final WorldStateArchive worldStateArchive;
+  private final ProtocolContext protocolContext;
 
   public BlockReplay(
       final ProtocolSchedule protocolSchedule,
-      final Blockchain blockchain,
-      final WorldStateArchive worldStateArchive) {
+      final ProtocolContext protocolContext,
+      final Blockchain blockchain) {
     this.protocolSchedule = protocolSchedule;
+    this.protocolContext = protocolContext;
     this.blockchain = blockchain;
-    this.worldStateArchive = worldStateArchive;
   }
 
   public Optional<BlockTrace> block(
@@ -52,18 +55,23 @@ public class BlockReplay {
     return performActionWithBlock(
         block.getHeader(),
         block.getBody(),
-        (body, header, blockchain, mutableWorldState, transactionProcessor) -> {
-          List<TransactionTrace> transactionTraces =
+        (body, header, blockchain, transactionProcessor, protocolSpec) -> {
+          final Wei blobGasPrice =
+              protocolSpec
+                  .getFeeMarket()
+                  .blobGasPricePerGas(
+                      blockchain
+                          .getBlockHeader(header.getParentHash())
+                          .map(parent -> calculateExcessBlobGasForParent(protocolSpec, parent))
+                          .orElse(BlobGas.ZERO));
+
+          final List<TransactionTrace> transactionTraces =
               body.getTransactions().stream()
                   .map(
                       transaction ->
                           action.performAction(
-                              transaction,
-                              header,
-                              blockchain,
-                              mutableWorldState,
-                              transactionProcessor))
-                  .collect(Collectors.toList());
+                              transaction, header, blockchain, transactionProcessor, blobGasPrice))
+                  .toList();
           return Optional.of(new BlockTrace(transactionTraces));
         });
   }
@@ -74,27 +82,38 @@ public class BlockReplay {
   }
 
   public <T> Optional<T> beforeTransactionInBlock(
-      final Hash blockHash, final Hash transactionHash, final TransactionAction<T> action) {
+      final TraceableState mutableWorldState,
+      final Hash blockHash,
+      final Hash transactionHash,
+      final TransactionAction<T> action) {
     return performActionWithBlock(
         blockHash,
-        (body, header, blockchain, mutableWorldState, transactionProcessor) -> {
-          final BlockHashLookup blockHashLookup = new BlockHashLookup(header, blockchain);
+        (body, header, blockchain, transactionProcessor, protocolSpec) -> {
+          final BlockHashLookup blockHashLookup =
+              protocolSpec.getPreExecutionProcessor().createBlockHashLookup(blockchain, header);
+          final Wei blobGasPrice =
+              protocolSpec
+                  .getFeeMarket()
+                  .blobGasPricePerGas(
+                      blockchain
+                          .getBlockHeader(header.getParentHash())
+                          .map(parent -> calculateExcessBlobGasForParent(protocolSpec, parent))
+                          .orElse(BlobGas.ZERO));
+
           for (final Transaction transaction : body.getTransactions()) {
             if (transaction.getHash().equals(transactionHash)) {
               return Optional.of(
                   action.performAction(
-                      transaction, header, blockchain, mutableWorldState, transactionProcessor));
+                      transaction, header, blockchain, transactionProcessor, blobGasPrice));
             } else {
-              final ProtocolSpec spec = protocolSchedule.getByBlockNumber(header.getNumber());
               transactionProcessor.processTransaction(
-                  blockchain,
                   mutableWorldState.updater(),
                   header,
                   transaction,
-                  spec.getMiningBeneficiaryCalculator().calculateBeneficiary(header),
+                  protocolSpec.getMiningBeneficiaryCalculator().calculateBeneficiary(header),
                   blockHashLookup,
-                  false,
-                  TransactionValidationParams.blockReplay());
+                  TransactionValidationParams.blockReplay(),
+                  blobGasPrice);
             }
           }
           return Optional.empty();
@@ -102,30 +121,33 @@ public class BlockReplay {
   }
 
   public <T> Optional<T> afterTransactionInBlock(
-      final Hash blockHash, final Hash transactionHash, final TransactionAction<T> action) {
+      final TraceableState mutableWorldState,
+      final Hash blockHash,
+      final Hash transactionHash,
+      final TransactionAction<T> action) {
     return beforeTransactionInBlock(
+        mutableWorldState,
         blockHash,
         transactionHash,
-        (transaction, blockHeader, blockchain, worldState, transactionProcessor) -> {
-          final ProtocolSpec spec = protocolSchedule.getByBlockNumber(blockHeader.getNumber());
+        (transaction, blockHeader, blockchain, transactionProcessor, blobGasPrice) -> {
+          final ProtocolSpec spec = protocolSchedule.getByBlockHeader(blockHeader);
           transactionProcessor.processTransaction(
-              blockchain,
-              worldState.updater(),
+              mutableWorldState.updater(),
               blockHeader,
               transaction,
               spec.getMiningBeneficiaryCalculator().calculateBeneficiary(blockHeader),
-              new BlockHashLookup(blockHeader, blockchain),
-              false,
-              TransactionValidationParams.blockReplay());
+              spec.getPreExecutionProcessor().createBlockHashLookup(blockchain, blockHeader),
+              TransactionValidationParams.blockReplay(),
+              blobGasPrice);
           return action.performAction(
-              transaction, blockHeader, blockchain, worldState, transactionProcessor);
+              transaction, blockHeader, blockchain, transactionProcessor, blobGasPrice);
         });
   }
 
   public <T> Optional<T> performActionWithBlock(final Hash blockHash, final BlockAction<T> action) {
     Optional<Block> maybeBlock = getBlock(blockHash);
     if (maybeBlock.isEmpty()) {
-      maybeBlock = getBadBlock(blockHash);
+      maybeBlock = protocolContext.getBadBlockManager().getBadBlock(blockHash);
     }
     return maybeBlock.flatMap(
         block -> performActionWithBlock(block.getHeader(), block.getBody(), action));
@@ -139,24 +161,10 @@ public class BlockReplay {
     if (body == null) {
       return Optional.empty();
     }
-    final ProtocolSpec protocolSpec = protocolSchedule.getByBlockNumber(header.getNumber());
+    final ProtocolSpec protocolSpec = protocolSchedule.getByBlockHeader(header);
     final MainnetTransactionProcessor transactionProcessor = protocolSpec.getTransactionProcessor();
-    final BlockHeader previous = blockchain.getBlockHeader(header.getParentHash()).orElse(null);
-    if (previous == null) {
-      return Optional.empty();
-    }
-    try (final MutableWorldState mutableWorldState =
-        worldStateArchive
-            .getMutable(previous.getStateRoot(), previous.getHash(), false)
-            .orElseThrow(
-                () ->
-                    new IllegalArgumentException(
-                        "Missing worldstate for stateroot "
-                            + previous.getStateRoot().toShortHexString()))) {
-      return action.perform(body, header, blockchain, mutableWorldState, transactionProcessor);
-    } catch (Exception ex) {
-      return Optional.empty();
-    }
+
+    return action.perform(body, header, blockchain, transactionProcessor, protocolSpec);
   }
 
   private Optional<Block> getBlock(final Hash blockHash) {
@@ -170,10 +178,8 @@ public class BlockReplay {
     return Optional.empty();
   }
 
-  private Optional<Block> getBadBlock(final Hash blockHash) {
-    final ProtocolSpec protocolSpec =
-        protocolSchedule.getByBlockNumber(blockchain.getChainHeadHeader().getNumber());
-    return protocolSpec.getBadBlocksManager().getBadBlock(blockHash);
+  public ProtocolSpec getProtocolSpec(final BlockHeader header) {
+    return protocolSchedule.getByBlockHeader(header);
   }
 
   @FunctionalInterface
@@ -182,8 +188,8 @@ public class BlockReplay {
         BlockBody body,
         BlockHeader blockHeader,
         Blockchain blockchain,
-        MutableWorldState worldState,
-        MainnetTransactionProcessor transactionProcessor);
+        MainnetTransactionProcessor transactionProcessor,
+        ProtocolSpec protocolSpec);
   }
 
   @FunctionalInterface
@@ -192,7 +198,7 @@ public class BlockReplay {
         Transaction transaction,
         BlockHeader blockHeader,
         Blockchain blockchain,
-        MutableWorldState worldState,
-        MainnetTransactionProcessor transactionProcessor);
+        MainnetTransactionProcessor transactionProcessor,
+        Wei blobGasPrice);
   }
 }
