@@ -1,5 +1,5 @@
 /*
- * Copyright contributors to Hyperledger Besu
+ * Copyright contributors to Hyperledger Besu.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -11,31 +11,39 @@
  * specific language governing permissions and limitations under the License.
  *
  * SPDX-License-Identifier: Apache-2.0
- *
  */
 package org.hyperledger.besu.evm.fluent;
 
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.evm.account.Account;
-import org.hyperledger.besu.evm.account.EvmAccount;
+import org.hyperledger.besu.evm.account.MutableAccount;
 import org.hyperledger.besu.evm.worldstate.WorldUpdater;
 
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+/** The Simple world. */
 public class SimpleWorld implements WorldUpdater {
 
-  SimpleWorld parent;
-  Map<Address, SimpleAccount> accounts = new HashMap<>();
+  /** The Parent. */
+  private final SimpleWorld parent;
 
+  /** The Accounts. */
+  private Map<Address, Optional<SimpleAccount>> accounts = new HashMap<>();
+
+  /** Instantiates a new Simple world. */
   public SimpleWorld() {
     this(null);
   }
 
+  /**
+   * Instantiates a new Simple world.
+   *
+   * @param parent the parent
+   */
   public SimpleWorld(final SimpleWorld parent) {
     this.parent = parent;
   }
@@ -47,49 +55,65 @@ public class SimpleWorld implements WorldUpdater {
 
   @Override
   public Account get(final Address address) {
+    Optional<SimpleAccount> account = Optional.empty();
     if (accounts.containsKey(address)) {
-      return accounts.get(address);
+      account = accounts.get(address);
     } else if (parent != null) {
-      return parent.get(address);
-    } else {
-      return null;
+      if (parent.get(address) instanceof SimpleAccount accountFromParent) {
+        account = Optional.of(accountFromParent);
+      }
     }
+    return account.orElse(null);
   }
 
   @Override
-  public EvmAccount createAccount(final Address address, final long nonce, final Wei balance) {
+  public MutableAccount createAccount(final Address address, final long nonce, final Wei balance) {
+    if (getAccount(address) != null) {
+      throw new IllegalStateException("Cannot create an account when one already exists");
+    }
     SimpleAccount account = new SimpleAccount(address, nonce, balance);
-    accounts.put(address, account);
+    accounts.put(address, Optional.of(account));
     return account;
   }
 
   @Override
-  public EvmAccount getAccount(final Address address) {
-    if (accounts.containsKey(address)) {
-      return accounts.get(address);
-    } else if (parent != null) {
-      return parent.getAccount(address);
-    } else {
-      return null;
+  public MutableAccount getAccount(final Address address) {
+    Optional<SimpleAccount> account = accounts.get(address);
+    if (account != null) {
+      return account.orElse(null);
     }
+    Account parentAccount = parent == null ? null : parent.getAccount(address);
+    if (parentAccount != null) {
+      account =
+          Optional.of(
+              new SimpleAccount(
+                  parentAccount,
+                  parentAccount.getAddress(),
+                  parentAccount.getNonce(),
+                  parentAccount.getBalance(),
+                  parentAccount.getCode()));
+      accounts.put(address, account);
+      return account.get();
+    }
+    return null;
   }
 
   @Override
   public void deleteAccount(final Address address) {
-    accounts.put(address, null);
+    accounts.put(address, Optional.empty());
   }
 
   @Override
   public Collection<? extends Account> getTouchedAccounts() {
-    return accounts.values();
+    return accounts.values().stream().filter(Optional::isPresent).map(Optional::get).toList();
   }
 
   @Override
   public Collection<Address> getDeletedAccountAddresses() {
     return accounts.entrySet().stream()
-        .filter(e -> e.getValue() == null)
+        .filter(e -> e.getValue().isEmpty())
         .map(Map.Entry::getKey)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -99,11 +123,18 @@ public class SimpleWorld implements WorldUpdater {
 
   @Override
   public void commit() {
-    parent.accounts.putAll(accounts);
+    accounts.forEach(
+        (address, account) -> {
+          if (account.isEmpty() || !account.get().commit()) {
+            if (parent != null) {
+              parent.accounts.put(address, account);
+            }
+          }
+        });
   }
 
   @Override
   public Optional<WorldUpdater> parentUpdater() {
-    return Optional.empty();
+    return Optional.ofNullable(parent);
   }
 }
