@@ -16,28 +16,24 @@ package org.hyperledger.besu.metrics.rocksdb;
 
 import static org.hyperledger.besu.metrics.BesuMetricCategory.KVSTORE_ROCKSDB_STATS;
 
-import org.hyperledger.besu.metrics.prometheus.PrometheusMetricsSystem;
+import org.hyperledger.besu.plugin.services.MetricsSystem;
+import org.hyperledger.besu.plugin.services.metrics.ExternalSummary;
+import org.hyperledger.besu.plugin.services.metrics.ExternalSummary.Quantile;
 import org.hyperledger.besu.plugin.services.metrics.MetricCategory;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 
-import io.prometheus.client.Collector;
 import org.rocksdb.HistogramData;
 import org.rocksdb.HistogramType;
 import org.rocksdb.Statistics;
 import org.rocksdb.TickerType;
 
+/** The Rocks db stats. */
 public class RocksDBStats {
-
-  static final List<String> LABELS = Collections.singletonList("quantile");
-  static final List<String> LABEL_50 = Collections.singletonList("0.5");
-  static final List<String> LABEL_95 = Collections.singletonList("0.95");
-  static final List<String> LABEL_99 = Collections.singletonList("0.99");
-
+  /** The constant TICKER_TYPES. */
   // Tickers - RocksDB equivalent of counters
-  static final TickerType[] TICKERS = {
+  static final TickerType[] TICKER_TYPES = {
     TickerType.BLOCK_CACHE_ADD,
     TickerType.BLOCK_CACHE_HIT,
     TickerType.BLOCK_CACHE_ADD_FAILURES,
@@ -45,12 +41,10 @@ public class RocksDBStats {
     TickerType.BLOCK_CACHE_INDEX_HIT,
     TickerType.BLOCK_CACHE_INDEX_ADD,
     TickerType.BLOCK_CACHE_INDEX_BYTES_INSERT,
-    TickerType.BLOCK_CACHE_INDEX_BYTES_EVICT,
     TickerType.BLOCK_CACHE_FILTER_MISS,
     TickerType.BLOCK_CACHE_FILTER_HIT,
     TickerType.BLOCK_CACHE_FILTER_ADD,
     TickerType.BLOCK_CACHE_FILTER_BYTES_INSERT,
-    TickerType.BLOCK_CACHE_FILTER_BYTES_EVICT,
     TickerType.BLOCK_CACHE_DATA_MISS,
     TickerType.BLOCK_CACHE_DATA_HIT,
     TickerType.BLOCK_CACHE_DATA_ADD,
@@ -84,7 +78,6 @@ public class RocksDBStats {
     TickerType.NUMBER_DB_NEXT_FOUND,
     TickerType.NUMBER_DB_PREV_FOUND,
     TickerType.ITER_BYTES_READ,
-    TickerType.NO_FILE_CLOSES,
     TickerType.NO_FILE_OPENS,
     TickerType.NO_FILE_ERRORS,
     // TickerType.STALL_L0_SLOWDOWN_MICROS,
@@ -92,26 +85,18 @@ public class RocksDBStats {
     // TickerType.STALL_L0_NUM_FILES_MICROS,
     TickerType.STALL_MICROS,
     TickerType.DB_MUTEX_WAIT_MICROS,
-    TickerType.RATE_LIMIT_DELAY_MILLIS,
-    TickerType.NO_ITERATORS,
     TickerType.NUMBER_MULTIGET_BYTES_READ,
     TickerType.NUMBER_MULTIGET_KEYS_READ,
     TickerType.NUMBER_MULTIGET_CALLS,
-    TickerType.NUMBER_FILTERED_DELETES,
     TickerType.NUMBER_MERGE_FAILURES,
     TickerType.BLOOM_FILTER_PREFIX_CHECKED,
     TickerType.BLOOM_FILTER_PREFIX_USEFUL,
     TickerType.NUMBER_OF_RESEEKS_IN_ITERATION,
     TickerType.GET_UPDATES_SINCE_CALLS,
-    TickerType.BLOCK_CACHE_COMPRESSED_MISS,
-    TickerType.BLOCK_CACHE_COMPRESSED_HIT,
-    TickerType.BLOCK_CACHE_COMPRESSED_ADD,
-    TickerType.BLOCK_CACHE_COMPRESSED_ADD_FAILURES,
     TickerType.WAL_FILE_SYNCED,
     TickerType.WAL_FILE_BYTES,
     TickerType.WRITE_DONE_BY_SELF,
     TickerType.WRITE_DONE_BY_OTHER,
-    TickerType.WRITE_TIMEDOUT,
     TickerType.WRITE_WITH_WAL,
     TickerType.COMPACT_READ_BYTES,
     TickerType.COMPACT_WRITE_BYTES,
@@ -122,7 +107,6 @@ public class RocksDBStats {
     TickerType.NUMBER_SUPERVERSION_CLEANUPS,
     TickerType.NUMBER_BLOCK_COMPRESSED,
     TickerType.NUMBER_BLOCK_DECOMPRESSED,
-    TickerType.NUMBER_BLOCK_NOT_COMPRESSED,
     TickerType.MERGE_OPERATION_TOTAL_TIME,
     TickerType.FILTER_OPERATION_TOTAL_TIME,
     TickerType.ROW_CACHE_HIT,
@@ -134,8 +118,9 @@ public class RocksDBStats {
     TickerType.NUMBER_MULTIGET_KEYS_FOUND,
   };
 
+  /** The constant HISTOGRAM_TYPES. */
   // Histograms - treated as prometheus summaries
-  static final HistogramType[] HISTOGRAMS = {
+  static final HistogramType[] HISTOGRAM_TYPES = {
     HistogramType.DB_GET,
     HistogramType.DB_WRITE,
     HistogramType.COMPACTION_TIME,
@@ -149,11 +134,6 @@ public class RocksDBStats {
     HistogramType.READ_BLOCK_COMPACTION_MICROS,
     HistogramType.READ_BLOCK_GET_MICROS,
     HistogramType.WRITE_RAW_BLOCK_MICROS,
-    HistogramType.STALL_L0_SLOWDOWN_COUNT,
-    HistogramType.STALL_MEMTABLE_COMPACTION_COUNT,
-    HistogramType.STALL_L0_NUM_FILES_COUNT,
-    HistogramType.HARD_RATE_LIMIT_DELAY_COUNT,
-    HistogramType.SOFT_RATE_LIMIT_DELAY_COUNT,
     HistogramType.NUM_FILES_IN_SINGLE_COMPACTION,
     HistogramType.DB_SEEK,
     HistogramType.WRITE_STALL,
@@ -162,55 +142,56 @@ public class RocksDBStats {
     HistogramType.BYTES_PER_READ,
     HistogramType.BYTES_PER_WRITE,
     HistogramType.BYTES_PER_MULTIGET,
-    HistogramType.BYTES_COMPRESSED,
-    HistogramType.BYTES_DECOMPRESSED,
     HistogramType.COMPRESSION_TIMES_NANOS,
     HistogramType.DECOMPRESSION_TIMES_NANOS,
     HistogramType.READ_NUM_MERGE_OPERANDS,
   };
 
+  /** Default constructor */
+  private RocksDBStats() {}
+
+  /**
+   * Register rocks db metrics.
+   *
+   * @param stats the stats
+   * @param metricsSystem the metrics system
+   * @param category the category
+   */
   public static void registerRocksDBMetrics(
-      final Statistics stats,
-      final PrometheusMetricsSystem metricsSystem,
-      final MetricCategory category) {
-    if (!metricsSystem.isCategoryEnabled(category)) {
-      return;
-    }
-    for (final TickerType ticker : TICKERS) {
-      final String promCounterName = ticker.name().toLowerCase();
+      final Statistics stats, final MetricsSystem metricsSystem, final MetricCategory category) {
+
+    for (final var tickerType : TICKER_TYPES) {
+      final String promCounterName = tickerType.name().toLowerCase(Locale.ROOT);
       metricsSystem.createLongGauge(
           category,
           promCounterName,
-          "RocksDB reported statistics for " + ticker.name(),
-          () -> stats.getTickerCount(ticker));
+          "RocksDB reported statistics for " + tickerType.name(),
+          () -> stats.getTickerCount(tickerType));
     }
 
-    for (final HistogramType histogram : HISTOGRAMS) {
-      metricsSystem.addCollector(category, () -> histogramToCollector(stats, histogram));
+    for (final var histogramType : HISTOGRAM_TYPES) {
+
+      metricsSystem.createSummary(
+          KVSTORE_ROCKSDB_STATS,
+          KVSTORE_ROCKSDB_STATS.getName() + "_" + histogramType.name().toLowerCase(Locale.ROOT),
+          "RocksDB histogram for " + histogramType.name(),
+          () -> provideExternalSummary(stats, histogramType));
     }
   }
 
-  private static Collector histogramToCollector(
-      final Statistics stats, final HistogramType histogram) {
-    return new Collector() {
-      final String metricName =
-          KVSTORE_ROCKSDB_STATS.getName() + "_" + histogram.name().toLowerCase();
+  private static ExternalSummary provideExternalSummary(
+      final Statistics stats, final HistogramType histogramType) {
 
-      @Override
-      public List<MetricFamilySamples> collect() {
-        final HistogramData data = stats.getHistogramData(histogram);
-        return Collections.singletonList(
-            new MetricFamilySamples(
-                metricName,
-                Type.SUMMARY,
-                "RocksDB histogram for " + metricName,
-                Arrays.asList(
-                    new MetricFamilySamples.Sample(metricName, LABELS, LABEL_50, data.getMedian()),
-                    new MetricFamilySamples.Sample(
-                        metricName, LABELS, LABEL_95, data.getPercentile95()),
-                    new MetricFamilySamples.Sample(
-                        metricName, LABELS, LABEL_99, data.getPercentile99()))));
-      }
-    };
+    final HistogramData data = stats.getHistogramData(histogramType);
+
+    return new ExternalSummary(
+        data.getCount(),
+        data.getSum(),
+        List.of(
+            new Quantile(0.0, data.getMin()),
+            new Quantile(0.5, data.getMedian()),
+            new Quantile(0.95, data.getPercentile95()),
+            new Quantile(0.99, data.getPercentile99()),
+            new Quantile(1.0, data.getMax())));
   }
 }
